@@ -11,6 +11,7 @@
 * Fixed background color of drop-down controls
 * Fixed selection glitches
 * Both up&downloads are disconnected if evil users quit (thanks poy)
+* Add average share to status bar (thanks mikejj)
 
 -- 0.705 2008-03-14 --
 * Several patches for better *nix compatibility of the core (thanks steven sheehy et al)
